--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-select": "^5.7.7",
     "react-text-mask": "^5.5.0",
     "styled-components": "^6.0.3",
     "swiper": "^10.0.4",
