--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://PaulHighrow.github.io/hotdog/",
   "dependencies": {
+    "@mui/styled-engine-sc": "^6.0.0-alpha.4",
+    "@mui/x-date-pickers": "^6.17.0",
     "@react-google-maps/api": "^2.19.2",
     "@react-hook/size": "^2.1.2",
     "@react-spring/web": "^9.7.3",
@@ -14,12 +16,14 @@
     "@types/npm": "^7.19.0",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.3",
     "formik-mui": "^5.0.0-alpha.0",
     "keen-slider": "^6.8.6",
     "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
     "react-cookie-consent": "^8.0.1",
+    "react-date-picker": "^10.5.2",
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.6.0",
     "react-horizontal-scrolling-menu": "^4.1.0",
@@ -34,7 +38,7 @@
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.7",
     "react-text-mask": "^5.5.0",
-    "styled-components": "^6.0.3",
+    "styled-components": "^6.1.0",
     "swiper": "^10.0.4",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
